# AMD_RasoSpeak

./: .buildmarker  .env.example  .gitignore  .huggingface.yml  .rebuild  ARCHITECTURE.md  ARCHITECTURE_VERDICT.md  AUDIO_FIRST_ARCHITECTURE.md  Dockerfile  EXAMPLE_EXECUTION_FLOW.md  IMPLEMENTATION_STATUS.md  MIGRATION_PLAN.md  PRODUCTION_REVIEW.md  README.md  REMEDIATION_PROGRESS.md  SYSTEM_ANALYSIS.md  app.js  app.py  chat.html  cli.py  coach.html  coaching_agent.py  docs.html  hf_app.py  hf_requirements.txt  index.html  integrated_runtime.py  main.py  memory.html  missing_functionalities.md  nlp.js  pyproject.toml  real_agentic.md  requirements.txt  schemas.py  scoring_agent.py  segmentation_agent.py  session_memory_agent.py  settings.html  settings.py  (+8 more)
agents/: analytics_agent.py  base_agent.py  coaching_agent.py  database.py  document_agent.py  llm_client.py  notification_agent.py  partner_agent.py  qa_agent.py  rag_agent.py  recording_agent.py  scoring_agent.py  search_agent.py  second_brain_agent.py  segmentation_agent.py  session_memory_agent.py  shared_memory_agent.py  transcription_agent.py  unified_memory_agent.py  wake_word_agent.py
api/: __init__.py  observability.py  state.py
api/middleware/: auth.py
api/routes/: analytics.py  brain.py  coaching.py  documents.py  qa.py  (+3 more)
config/: prompts.py  settings.py
db/: __init__.py  unified.py
frontend/: runtime.js
k8s/: rasospeak-deployment.yaml
memory/: conversations.json  facts.json  profile.json
models/: schemas.py
services/: rate_limiter.py  security.py  voice.py
tests/: test_second_brain.py
(+62 files in other folders)
